ClusterSetup/AllowinfNetwork/egress-client.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: client-ingress
  namespace: nptest
spec:
  podSelector:
    matchLabels:
      app: client
  policyTypes:
    - Egress
  
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              project: test
        - podSelector:
            matchLabels:
              app: nginx
      ports:
        - protocol: TCP
          port: 80
